@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.1.16-cur, done by cs@nop.
--;-;-;2022-01-16 13:34:11, took 00:07:12, with 100 workers, on 2638 cases, 0 failed, 0 traces, 3 retries
+-;-;-;2022-01-16 13:57:07, took 00:06:25, with 100 workers, on 2642 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -2210,6 +2210,10 @@ http://sources.nop.hu/cfg/rout-bgp527.tst;rout-bgp527.tst;success;bgp with polka
 http://sources.nop.hu/cfg/rout-bgp528.tst;rout-bgp528.tst;success;bgp without recursion
 http://sources.nop.hu/cfg/rout-bgp529.tst;rout-bgp529.tst;success;bgp with recursion
 http://sources.nop.hu/cfg/rout-bgp530.tst;rout-bgp530.tst;success;bgp with route flap dampening
+http://sources.nop.hu/cfg/rout-bgp531.tst;rout-bgp531.tst;success;bgp routemap filtering with nexthop
+http://sources.nop.hu/cfg/rout-bgp532.tst;rout-bgp532.tst;success;bgp routepolicy filtering with nexthop
+http://sources.nop.hu/cfg/rout-bgp533.tst;rout-bgp533.tst;success;bgp routemap filtering with nexthop with soft-reconfig
+http://sources.nop.hu/cfg/rout-bgp534.tst;rout-bgp534.tst;success;bgp routepolicy filtering with nexthop with soft-reconfig
 http://sources.nop.hu/cfg/rout-eigrp01.tst;rout-eigrp01.tst;success;eigrp point2point connection
 http://sources.nop.hu/cfg/rout-eigrp02.tst;rout-eigrp02.tst;success;eigrp point2multipoint connection
 http://sources.nop.hu/cfg/rout-eigrp03.tst;rout-eigrp03.tst;success;eigrp point2point chain
