@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.1.16-cur, done by cs@nop.<br/>
-tested: 2022-01-16 13:34:11, took 00:07:12, with 100 workers, on 2638 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2022-01-16 13:57:07, took 00:06:25, with 100 workers, on 2642 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -2223,6 +2223,10 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-bgp528.tst">rout-bgp528.tst</a></td><td>success</td><td>bgp without recursion</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-bgp529.tst">rout-bgp529.tst</a></td><td>success</td><td>bgp with recursion</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-bgp530.tst">rout-bgp530.tst</a></td><td>success</td><td>bgp with route flap dampening</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp531.tst">rout-bgp531.tst</a></td><td>success</td><td>bgp routemap filtering with nexthop</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp532.tst">rout-bgp532.tst</a></td><td>success</td><td>bgp routepolicy filtering with nexthop</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp533.tst">rout-bgp533.tst</a></td><td>success</td><td>bgp routemap filtering with nexthop with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-bgp534.tst">rout-bgp534.tst</a></td><td>success</td><td>bgp routepolicy filtering with nexthop with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
